--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # ==============================================
-#  Ctrl+T 前缀 + Ctrl+H 退格 + 纯 Vim 党专用 tmux.conf
+#  极致保留 Shell 所有快捷键 + Ctrl+T 前缀 + Vim 专用 tmux.conf
 # ==============================================
 
 set -g mouse on
@@ -11,20 +11,18 @@ setw -g pane-base-index 1
 set -g renumber-windows on
 set -g status-interval 1
 
-# ==================== 前缀改为 Ctrl+t ====================
-set -g prefix C-t          # 主前缀：Ctrl+t
+# 前缀：Ctrl+t
+set -g prefix C-t
 unbind C-b
-bind C-t send-prefix       # 按两下 Ctrl+t 发送真正的 Ctrl+t（给 Vim 等用）
-
-# 如果你还想保留 Ctrl+a 作为备用前缀（可选）
-# set -g prefix2 C-a
+bind C-t send-prefix
 
 # 新建窗口/面板保持当前路径
 bind c new-window -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-# ==================== 面板切换：彻底让出 Ctrl+hjkl，用 Alt+hjkl ====================
+# ==================== 彻底不抢任何 Ctrl 快捷键 ====================
+# 面板切换全部改成 Alt+hjkl（小拇指 + 无名指，最舒服）
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '(^|\/)g?(view|l?n?vim?x?|fzf)(diff)?$'"
 
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h' 'select-pane -L'
@@ -32,46 +30,42 @@ bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j' 'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k' 'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l' 'select-pane -R'
 
-# 前缀 + hjkl 强制切换（就算在 Vim 里也生效）
+# 前缀 + hjkl 强制切换（保险）
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# ==================== 让 Ctrl+l 完美清屏（最丝滑）================
+# 按 Ctrl+l → 先发给程序（vim 会刷新），再清屏 + 清历史
+bind -n C-l if-shell "$is_vim" 'send-keys C-l'  'send-keys C-l; clear && tmux clear-history'
+
 # ==================== Vim 风格复制模式 ====================
 setw -g mode-keys vi
-bind Escape copy-mode                    # Ctrl+t Esc 进入复制模式
+bind Escape copy-mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi V send -X select-line
-bind -T copy-mode-vi y send -X copy-selection-and-cancel
-
-# 复制到系统剪贴板（根据你的系统选一行取消注释）
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"  # Linux
 # bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"                        # macOS
 
-# Vim 风格搜索
-bind -T copy-mode-vi / command-prompt -i -p "search down" "send -X search-forward-incremental \"%%%\""
-bind -T copy-mode-vi ? command-prompt -i -p "search up"   "send -X search-backward-incremental \"%%%\""
-
-# ==================== 常用快捷键（全 Vim 风）================
-bind : command-prompt                    # Ctrl+t : 命令模式
-bind v split-window -h -c "#{pane_current_path}"   # Ctrl+t v 水平分割
-bind s split-window -v -c "#{pane_current_path}"   # Ctrl+t s 垂直分割
-bind + resize-pane -Z                    # Ctrl+t + 放大/还原当前面板
-bind = select-layout even-horizontal     # Ctrl+t = 水平均匀布局
-
-# 调整面板大小（可重复按）
+# ==================== 其他 Vim 风快捷键 ====================
+bind : command-prompt
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
+bind + resize-pane -Z
+bind = select-layout even-horizontal
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-
-# 快速切换窗口
 bind -n M-< previous-window
 bind -n M-> next-window
-bind Tab last-window                     # Ctrl+t Tab 切换最近窗口
+bind Tab last-window
 
-# ==================== 状态栏（极简好看）================
+# 预览所有窗口（最常用）
+bind w choose-tree -Zw   # Ctrl+t w → 缩略图列表，用 hjkl 或鼠标选
+
+# ==================== 状态栏 ====================
 set -g status-style bg=default,fg=colour250
 set -g status-left " #S "
 set -g status-right "#[fg=colour240]%Y-%m-%d %H:%M:%S "
@@ -80,9 +74,9 @@ set -g window-status-format "#[fg=colour244]#I:#W"
 set -g pane-border-style fg=colour240
 set -g pane-active-border-style fg=cyan
 
-# ==================== 插件（强烈推荐）================
+# ==================== 插件 ====================
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'      # Ctrl+t Ctrl+s 保存，Ctrl+t Ctrl+r 恢复
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
@@ -90,5 +84,4 @@ set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @continuum-restore 'on'
 set -g @resurrect-capture-pane-contents 'on'
 
-# 初始化 tpm（必须放最后）
 run '~/.tmux/plugins/tpm/tpm'
